fix: profile__subtittle overflow

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,6 +3,10 @@
 	grid-area: job;
 	font-size: 18px;
 	text-align: left;
+	max-width: 336px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 1023px) {
@@ -11,5 +15,6 @@
 		font-size: 14px;
 		line-height: 17px;
 		text-align: center;
+		max-width: 282px;
 	}
 }
